# hopter

./: .gitignore  Cargo.toml  LICENSE  README.md  a.out  build.rs  commands.sh  hello.s  hopter.s  libhopter.s  link.ld  link.ld.in  memory.x  new_link.ld  obj.s  run_tests.py  run_tests_with_openocd.py  run_tests_with_qemu.py  rust-toolchain
.cargo/: config.toml
.github/workflows/: build.yaml  channel.yaml  check-qemu.yaml  check-rust-toolchain.yaml  context_switch.yaml  cpu_load.yaml  debug.yaml  interrupt-mailbox.yaml  interrupt-semaphore.yaml  interrupt-unwind.yaml  interrupt.yaml  mailbox.yaml  main.yaml  mutex.yaml  priority.yaml  segmented_stack.yaml  semaphore.yaml  sync.yaml  task-unwind.yaml  task.yaml  tests.yaml
.github/workflows/actions/build-test/: action.yaml
.github/workflows/actions/prepare-qemu/: action.yaml
.github/workflows/actions/prepare-rust-toolchain/: action.yaml
.github/workflows/actions/run-test/: action.yaml
.github/workflows/actions/test-hello-world/: action.yaml
examples/: hadusos_echo.rs  hello_world.rs  linker.rs  liveness.rs  mailbox.rs  mailbox_uart.rs  semaphore.rs  semaphore_test1.rs  sleep.rs  task_panic_restart.rs  test_uart_generic.rs  timer_interrupt.rs  uart.rs  uart_crc.rs  uart_crc_binary.rs  uart_echo.rs  unw_iter.rs
examples/tests/debug/cpu_load/: load_40_percent.py  load_40_percent.rs
examples/tests/interrupt/mailbox/: notify_allow_isr.rs  notify_allow_isr.txt
examples/tests/interrupt/semaphore/: try_down_allow_isr.rs  try_down_allow_isr.txt  try_up_allow_isr.rs  try_up_allow_isr.txt
examples/tests/interrupt/unwind/: panic_upon_blocking.rs  simple.rs  simple.txt
examples/tests/sync/: initialization.rs
examples/tests/sync/channel/: concurrency_and_stress.rs  multiple_consumers.rs  multiple_consumers.txt  multiple_producers.rs  produce_consume_single_task.rs  produce_with_overflow.rs  produce_with_overflow_from_isr.rs  try_consume.rs  try_consume_allow_isr.rs  try_consume_from_isr.rs  try_consume_from_isr.txt  try_consume_from_task.rs  try_produce_from_isr.rs  try_produce_from_isr.txt  try_produce_from_task.rs
examples/tests/sync/mailbox/: notify_by_task.rs  notify_by_task.txt  notify_from_isr.rs  notify_from_isr.txt  notify_in_advance.rs  notify_in_advance_after_timeout.rs  task_not_timeout.rs  task_timeout.rs
examples/tests/sync/mutex/: 10_tasks_10_edits_each.rs  10_tasks_10_edits_each.txt  basic.rs  basic.txt  multiple_tasks_try_lock.rs  multiple_tasks_try_lock.txt  mut_priority_scheduling.rs  mut_priority_scheduling.txt  poison.rs  poisoned.rs  priority.rs  priority.txt  priority_inversion.rs  priority_inversion.txt  single_task.rs  single_task.txt  stress.rs
examples/tests/sync/semaphore/: 100_tasks_1000_up_down.rs  10_tasks_100_up_down.rs  2_tasks_5_down_5_up.py  2_tasks_5_down_5_up.rs  4_tasks_down_contend_init_3.py  4_tasks_down_contend_init_3.rs  down.rs  down_0_then_try_down.rs  down_priority_scheduling.rs  down_priority_scheduling.txt  down_test.rs  down_until_0_then_try_down..rs  init_0_blocking_down.rs  init_0_blocking_down.txt  initialization.rs  multiple_tasks  multiple_tasks.py  multiple_tasks.rs  multiple_tasks.txt  new_test_draft.rs  stress_test.rs  try_down_from_isr.rs  try_down_from_isr.txt  try_down_ok_then_err.rs  try_up_Ok_then_Err.rs  try_up_from_isr.rs  try_up_from_isr.txt  try_up_ok_then_err.rs  up.rs  up_max_then_try_up.rs  up_priority_scheduling.rs  up_priority_scheduling.txt
examples/tests/task/context_switch/: fp_registers.rs  gp_registers.rs
examples/tests/task/priority/: reduce_priority.rs  unwind_priority.rs  unwind_priority.txt
examples/tests/task/segmented_stack/: function_arguments.rs  nested_functions.rs  return_values.rs  verify_regs_stack_new_function.rs
examples/tests/task/unwind/: block_while_sched_suspend.rs  block_while_sched_suspend.txt  concurrent_restart.rs  concurrent_restart.txt  deferred_direct_drop.rs  deferred_direct_drop.txt  deferred_indirect_drop.rs  deferred_indirect_drop.txt  deferred_nested_drop.rs  deferred_nested_drop.txt  diverted.rs  diverted.txt  failed_concurrent_restart.rs  failed_concurrent_restart.txt
src/: lib.rs
src/allocator/: heap.rs  mod.rs
src/assembly/: aeabi_memops.rs  memops.rs  mod.rs
src/boot/: entry.rs  mod.rs  reset.rs  system_init.rs  vector_table.rs
src/boot/vector_table/: mod.rs  stm32f072.rs  stm32f401.rs  stm32f405.rs  stm32f407.rs  stm32f410.rs  stm32f411.rs  stm32f412.rs  stm32f413.rs  stm32f427.rs  stm32f429.rs  stm32f446.rs  stm32f469.rs
src/boot/vector_table/stm32f0/: mod.rs  stm32f0x0.rs  stm32f0x2.rs  stm32f0x8.rs
src/boot/vector_table/stm32f4/: mod.rs  stm32f401.rs  stm32f405.rs  stm32f407.rs  stm32f410.rs  stm32f411.rs  stm32f412.rs  stm32f413.rs  stm32f427.rs  stm32f429.rs  stm32f446.rs  stm32f469.rs
src/config/: helper.rs  mod.rs
src/debug/: cpu_load.rs  mod.rs  segmented_stack.rs  semihosting.rs
src/hadusos/: lib.rs  link.rs  mod.rs  packet.rs  serial.rs  session.rs  tests.rs  timer.rs
src/interrupt/: context_switch.rs  declare.rs  default.rs  entry_exit.rs  hardfault.rs  mask.rs  mod.rs  svc.rs  svc_handler.rs  systick.rs  test.rs  trap_frame.rs
src/schedule/: cpu_usage.rs  current.rs  current_task.rs  idle.rs  mod.rs  scheduler.rs  start_task.rs
src/sync/: channel.rs  condvar.rs  held_interrupt.rs  imported.rs  interruptable.rs  lock_traits.rs  mailbox.rs  maskable_irq.rs  mod.rs  mutex.rs  refcell_sched_safe.rs  semaphore.rs  soft_lock.rs  spin_lock.rs  suspend_scheduler.rs  wait_queue.rs
src/task/: breathing.rs  builder.rs  current.rs  mod.rs  priority.rs  segmented_stack.rs  task_list.rs  task_struct.rs  test.rs  trampoline.rs
src/time/: mod.rs
src/uart/: mod.rs
src/unrecoverable/: mod.rs
src/unwind/: forced.rs  mod.rs  panic.rs  unw_catch.rs  unw_lsda.rs  unw_table.rs  unwind.rs
